# zellaude

./: CLAUDE.md  Cargo.toml  PERFORMANCE.md  PERFORMANCE_TASKS.md  README.md  justfile
benches/: event_bench.rs  render_bench.rs  state_bench.rs
scripts/: bench-hook.sh  zellaude-hook.sh
src/: event_handler.rs  installer.rs  lib.rs  main.rs  render.rs  state.rs  tab_pane_map.rs  test_helpers.rs
tests/: event_flow.rs  render_integration.rs
