[package]
name = "zellaude"
version = "0.4.1"
edition = "2021"

[dependencies]
zellij-tile = "0.43.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "zellaude"
path = "src/lib.rs"

[[bin]]
name = "zellaude"
path = "src/main.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "render_bench"
harness = false

[[bench]]
name = "event_bench"
harness = false

[[bench]]
name = "state_bench"
harness = false

[package.metadata.release]
publish = false
tag-prefix = "v"

[profile.release]
opt-level = "s"
lto = true
